# firo_logger

./: CHANGELOG.md  Cargo.toml  LICENSE  README.md  release.sh  test-local.sh
.github/: dependabot.yml
.github/workflows/: auto-update.yml  ci.yml  release.yml
examples/: async_performance.rs  basic_usage.rs  file_rotation.rs  json_logging.rs
src/: config.rs  error.rs  formatters.rs  lib.rs  logger.rs  macros.rs  writers.rs
tests/: basic_integration_test.rs  concurrent_test.rs  integration_test.rs
