[package]
name        = "firo_logger"
version     = "0.3.0"
edition     = "2021"
authors     = ["Firat Honca <firathonca@gmail.com>"]
description = "A high-performance, feature-rich logger for Rust applications with colored output, structured logging, and advanced configuration"
license     = "MIT"
repository  = "https://github.com/Mightybeast12/firo_logger/"
keywords    = ["logging", "logger", "colored", "structured", "async"]
categories  = ["development-tools::debugging"]

[dependencies]
chrono            = { version = "0.4.41", features = ["serde"] }
serde             = { version = "1.0", features = ["derive"] }
serde_json        = { version = "1.0", optional = true }
crossbeam-channel = { version = "0.5", optional = true }
parking_lot       = "0.12"
once_cell         = "1.21.3"
thiserror         = "2.0.14"
anyhow            = "1.0"
uuid              = { version = "1.18.0", features = ["v4"] }
atty              = "0.2"
log               = { version = "0.4.27", optional = true }

[dev-dependencies]
criterion = "0.7.0"
tempfile  = "3.0"
tokio     = { version = "1.0", features = ["full"] }

[features]
default = ["colors", "json", "async"]
colors  = []
json    = ["serde_json"]
async   = ["crossbeam-channel"]
syslog  = []
